--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 matplotlib<3.6.3
-numpy==1.24.2
-pandas==1.5.3
+numpy<1.24.2
+pandas<1.5.3
 plot<0.6.5
 plotly<5.13.0
-scipy==1.10.0
-seaborn==0.12.2
-streamlit==1.18.1
+scipy<1.10.0
+seaborn<0.12.2
+streamlit<1.18.1
